# metadata_searcher

./: Cargo.toml
src/: data.json  json_appender.py  links.txt  main.rs  metadata_searcher.sh  temp.json
src/lib/lastfm-rs-master/: Cargo.toml
src/lib/lastfm-rs-master/src/: album.rs
src/lib/musicbrainz_rs-main/src/entity/: artist.rs  release_group.rs
