[package]
name = "metadata_searcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musicbrainz_rs = {path="/home/lydia/Documents/github_repos/musicbrainz_rs-main"}
lastfm-rs = { git = "https://github.com/tsirysndr/lastfm-rs" }
tokio = {version = "*", features = ["full"]}