[package]
name = "metadata_searcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musicbrainz_rs = { path="./src/lib/musicbrainz_rs-main" }
lastfm-rs = { path = "./src/lib/lastfm-rs-master" }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
